fixed clipping of artwork

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -73,7 +73,8 @@ body
                             font-weight bold 
                         .video--icon
                             margin-left 0.5rem
-                            transform scale(0.7)
+                            margin-top 2px
+                            transform scale(0.5)
                             opacity 1
                             fill $primary
                             &.is-hidden 
